--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+    <Button
+            android:id="@+id/scanButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
+            android:text="SCAN"
+            android:gravity="center"/>
+
+    <TextView
+            android:id="@+id/scanResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:autoLink="web"
+            android:layout_gravity="center"
+            android:gravity="center"/>
+
 </android.support.constraint.ConstraintLayout>
