--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/backgroundapp"
+        android:id="@+id/main_content"
         tools:context=".MainActivity">
 
     <android.support.design.widget.AppBarLayout
