--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -12,7 +12,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txt_question"
-            android:textSize="22dp"
+            android:textSize="22sp"
+            android:layout_margin="20dp"
+            android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
@@ -20,8 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_margin="20dp"
             app:layout_constraintTop_toBottomOf="@id/txtQuestion">
-
     </LinearLayout>
 
     <ProgressBar
