--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#222222</color>
+    <color name="greenButtonColor">#00b200</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
