refactor ArActivity and CustomArFragment to support saving fragment state (needs cleanup). hide top ui bar in ar portion of the app. remove useless (and incorrect) throwStrength function & value from Projectile.

--- a/app/src/main/res/layout/fragment_custom_ar.xml
+++ b/app/src/main/res/layout/fragment_custom_ar.xml
@@ -39,7 +39,7 @@
             android:layout_marginBottom="8dp"
             android:elevation="5dp"
             android:gravity="center"
-            android:text="Throws: X"
+            android:text="Throws: 5"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_score"
@@ -53,7 +53,7 @@
             android:layout_marginBottom="16dp"
             android:elevation="5dp"
             android:gravity="center"
-            android:text="Score: X"
+            android:text="Score: 0.0"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
