add pause button & functionality to ar part.

--- a/app/src/main/res/layout/fragment_custom_ar.xml
+++ b/app/src/main/res/layout/fragment_custom_ar.xml
@@ -98,4 +98,14 @@
             android:max="1500"
             android:progressDrawable="@drawable/progressbar_states" />
 
+    <Button
+            android:id="@+id/btn_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="Pause"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
