added tab layout for swiping between discounts fragment and user discounts fragment

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,6 +19,10 @@
 
     <item android:title="@string/menu">
         <menu>
+            <item android:id="@+id/nav_home"
+                android:icon="@mipmap/ic_launcher"
+                android:title="@string/home" />
+
             <item android:id="@+id/nav_discounts"
                     android:icon="@drawable/ic_star_yellow_24dp"
                     android:title="@string/discounts" />
