move most string constants to the proper resource file.

--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -25,7 +25,7 @@
             android:layout_marginBottom="8dp"
             android:elevation="5dp"
             android:gravity="center"
-            android:text="HP: X"
+            android:text="@string/txt_HP"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_throws"
@@ -39,7 +39,7 @@
             android:layout_marginBottom="8dp"
             android:elevation="5dp"
             android:gravity="center"
-            android:text="Throws: 5"
+            android:text="@string/txt_throws"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_score"
@@ -53,7 +53,7 @@
             android:layout_marginBottom="16dp"
             android:elevation="5dp"
             android:gravity="center"
-            android:text="Score: 0.0"
+            android:text="@string/txt_score"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -67,7 +67,7 @@
             android:layout_marginBottom="16dp"
             android:elevation="5dp"
             android:gravity="center"
-            android:text="Wind(y): X"
+            android:text="@string/txt_wind_y"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -81,7 +81,7 @@
             android:layout_marginBottom="8dp"
             android:elevation="5dp"
             android:gravity="center"
-            android:text="Wind(x): X"
+            android:text="@string/txt_wind_x"
             android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_wind_y"
@@ -103,7 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="Pause"
+            android:text="@string/txt_pause"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
