--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".fragments.StartFragment">
+             tools:context=".fragments.StartFragment"
+    android:orientation="vertical">
 
     <Button
             android:id="@+id/btnStart"
@@ -13,4 +14,5 @@
             android:textAllCaps="true"
             android:textAlignment="center"/>
 
-</FrameLayout>
+
+</LinearLayout>
