--- a/app/src/main/res/layout/fragment_user_discounts.xml
+++ b/app/src/main/res/layout/fragment_user_discounts.xml
@@ -11,4 +11,12 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <!-- TODO: Here is the discount swipe button -->
+    <com.example.timil.climateapplication.SwipeButton
+        android:id="@+id/swipe_btn"
+        android:layout_width="match_parent"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_height="72dp" />
+
 </FrameLayout>
