--- a/app/src/main/res/layout/fragment_view_discount.xml
+++ b/app/src/main/res/layout/fragment_view_discount.xml
@@ -38,4 +38,12 @@
         android:layout_height="wrap_content"
         android:text="USE DISCOUNT"/>
 
+    <!-- TODO: Here is the discount swipe button -->
+    <com.example.timil.climateapplication.SwipeButton
+        android:id="@+id/swipe_btn"
+        android:layout_width="match_parent"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_height="72dp" />
+
 </LinearLayout>
