--- a/app/src/main/res/layout/discount_recycler_view_item.xml
+++ b/app/src/main/res/layout/discount_recycler_view_item.xml
@@ -2,6 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:elevation="8dp"
+        android:background="@color/cardview_light_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:clickable="true">
 
