--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#222222</color>
     <color name="greenButtonColor">#00b200</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#00b200</color>
     <color name="backgroundIconStart">#abffb3</color>
     <color name="backgroundIconCenter">#f6ff8f</color>
     <color name="backgroundIconEnd">#6be0e8</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
