--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -27,6 +27,10 @@
                     android:icon="@drawable/ic_star_yellow_24dp"
                     android:title="@string/discounts" />
 
+            <item android:id="@+id/nav_settings"
+                android:icon="@drawable/settings"
+                android:title="@string/settings"/>
+
             <item android:id="@+id/nav_logout"
                     android:icon="@drawable/ic_exit_to_app_black_24dp"
                     android:title="@string/logout_menu"/>
