--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".fragments.StartFragment"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.StartFragment"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
 
-    <Button
+    <!--Button
             android:id="@+id/btnStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/start_game"
             android:textAllCaps="true"
-            android:textAlignment="center"/>
+            android:textAlignment="center"/-->
 
     <LinearLayout
         android:id="@+id/linearDailyTips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="32dp"
         android:elevation="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/cardview_light_background">
 
         <TextView
@@ -33,14 +41,38 @@
             android:gravity="center_vertical"
             android:layout_margin="8dp"/>
 
-        <TextView
-            android:id="@+id/tvDailyTipInfo"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="@string/loading_daily_tip"
-            android:backgroundTint="@color/fui_transparent"/>
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/squirrelly_view"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                />
+
+            <TextView
+                android:id="@+id/tvDailyTipInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@string/loading_daily_tip"
+                android:backgroundTint="@color/fui_transparent"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+    <com.example.timil.climateapplication.CustomButton
+        android:id="@+id/custom_button_frame"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+</android.support.constraint.ConstraintLayout>
