--- a/app/src/main/res/layout/discount_recycler_view_item.xml
+++ b/app/src/main/res/layout/discount_recycler_view_item.xml
@@ -39,6 +39,13 @@
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/fui_transparent"/>
 
+        <TextView
+            android:id="@+id/tvExpiringDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:backgroundTint="@color/fui_transparent"/>
+
     </LinearLayout>
 
     <View
