--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -72,31 +72,30 @@
         android:id="@+id/frameLayout_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ar_fragment">
 
-        <TextView
+        <com.example.timil.climateapplication.EqualWidthHeightTextView
             android:id="@+id/tv_force"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/bg_arrow_tv"
             android:elevation="10dp"
             android:gravity="center"
+            android:inputType="number"
+            android:padding="1dp"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/iv_arrow"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:adjustViewBounds="true"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:elevation="5dp"
-            android:padding="2dp"
-            android:scaleType="fitCenter"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/arrow" />
     </FrameLayout>
 
