--- a/app/src/main/res/drawable/shape_button.xml
+++ b/app/src/main/res/drawable/shape_button.xml
@@ -1,8 +1,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="50dp" />
-            <solid android:color="@android:color/white" />
-        </shape>
-    </item>
+
+<item>
+    <shape android:shape="rectangle" >
+        <stroke android:width="2dp" android:color="@color/colorWhite"/>
+        <corners android:radius="50dp" />
+        <solid android:color="@color/colorAccent" />
+    </shape>
+</item>
 </selector>
