--- a/app/src/main/res/drawable/shape_rounded.xml
+++ b/app/src/main/res/drawable/shape_rounded.xml
@@ -1,8 +1,9 @@
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false" android:state_selected="false">
-        <shape android:shape="rectangle">
-            <corners android:radius="150dp" />
-            <solid android:color="#4D6070" />
-        </shape>
-    </item>
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<item android:state_pressed="false" android:state_selected="false" android:left="4dp" android:top="4dp" android:right="4dp" android:bottom="4dp" >
+    <shape android:shape="rectangle">
+        <stroke android:width="2dp" android:color="@color/colorWhite"/>
+        <corners android:radius="150dp" />
+        <solid android:color="@color/colorPrimary" />
+    </shape>
+</item>
+</layer-list>
