--- a/app/src/main/res/layout/activity_ar.xml
+++ b/app/src/main/res/layout/activity_ar.xml
@@ -95,8 +95,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:elevation="5dp"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/arrow" />
+            android:scaleType="matrix"
+            android:background="@drawable/arrow"/>
     </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
