--- a/app/src/main/res/layout/custom_swipe_button_layout.xml
+++ b/app/src/main/res/layout/custom_swipe_button_layout.xml
@@ -29,6 +29,7 @@ android:layout_height="match_parent">
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:foregroundTint="@color/colorWhite"
             android:foreground="@drawable/lock"
             android:background="@drawable/shape_button" />
 
