--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -9,14 +9,6 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <!--Button
-            android:id="@+id/btnStart"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/start_game"
-            android:textAllCaps="true"
-            android:textAlignment="center"/-->
-
     <LinearLayout
         android:id="@+id/linearDailyTips"
         android:layout_width="match_parent"
@@ -29,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/cardview_light_background">
+        android:background="@color/colorWhite">
 
         <TextView
             android:id="@+id/tvDailyTip"
@@ -48,6 +40,7 @@
 
             <ImageView
                 android:id="@+id/squirrelly_view"
+                android:background="@drawable/squirrelly_squirrel"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 />
@@ -56,15 +49,18 @@
                 android:id="@+id/tvDailyTipInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="@string/loading_daily_tip"
-                android:backgroundTint="@color/fui_transparent"/>
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:paddingStart="25dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="10dp"
+                android:paddingBottom="10dp"/>
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <com.example.timil.climateapplication.CustomButton
+    <!--com.example.timil.climateapplication.CustomButton
         android:id="@+id/custom_button_frame"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -73,6 +69,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        /-->
+
+    <Button
+        android:id="@+id/button_start"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:elevation="16dp"
+        android:background="@drawable/custom_button"
+        android:text="@string/start_game"
+        android:textColor="@color/colorWhite"
         />
 
 </android.support.constraint.ConstraintLayout>
