put a max width on the 'information' part of the map view's custom info window (to make it look nicer).

--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -67,6 +67,7 @@
         android:background="@drawable/bg_info_window_tv"
         android:textSize="14sp"
         android:padding="8dp"
+        android:maxWidth="220dp"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
