--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#222222</color>
     <color name="greenButtonColor">#00b200</color>
     <color name="colorAccent">#00b200</color>
+    <color name="colorGrayAlpha">#77000000</color>
     <color name="backgroundIconStart">#abffb3</color>
     <color name="backgroundIconCenter">#f6ff8f</color>
     <color name="backgroundIconEnd">#6be0e8</color>
