--- a/app/src/main/res/drawable/speech_bubble.xml
+++ b/app/src/main/res/drawable/speech_bubble.xml
@@ -3,7 +3,7 @@
 
     <item android:left="10dp" android:top="3dp" android:right="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="#CCCCCC" />
+            <solid android:color="@color/colorAccent" />
             <corners android:radius="5dp" />
         </shape>
     </item>
@@ -19,7 +19,7 @@
             <shape
                 android:shape="rectangle" >
                 <solid
-                    android:color="#CCCCCC"/>
+                    android:color="@color/colorAccent"/>
             </shape>
         </rotate>
     </item>
@@ -27,7 +27,7 @@
     <item android:left="13dp" android:bottom="3dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorWhite" />
-            <stroke android:width="1dp" android:color="#CCCCCC"/>
+            <stroke android:width="1dp" android:color="@color/colorAccent"/>
             <corners android:radius="5dp" />
         </shape>
     </item>
@@ -44,7 +44,7 @@
                 android:shape="rectangle" >
                 <solid
                     android:color="@color/colorWhite"/>
-                <stroke android:width="1dp" android:color="#CCCCCC"/>
+                <stroke android:width="1dp" android:color="@color/colorAccent"/>
             </shape>
         </rotate>
     </item>
@@ -59,7 +59,7 @@
                 android:shape="line" >
                 <stroke
                     android:width="2dp"
-                    android:color="#CCCCCC"
+                    android:color="@color/colorAccent"
                     />
             </shape>
         </rotate>
