--- a/app/src/main/res/drawable/tv_background.xml
+++ b/app/src/main/res/drawable/tv_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@android:color/white" />
-    <stroke android:width="1dip" android:color="#4fa5d5"/>
-    <corners android:radius="5dp" />
+    <solid android:color="@color/colorWhite" />
+    <stroke android:width="3dip" android:color="@color/colorAccent"/>
+    <corners android:radius="10dp" />
 </shape>
