--- a/app/src/main/res/layout/checkbox.xml
+++ b/app/src/main/res/layout/checkbox.xml
@@ -1,22 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_root"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:padding="10dp" >
-    <TextView
-        android:id="@+id/dialog_text"
-        android:layout_width="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:paddingStart="16dp"
+    android:paddingTop="16dp"
+    android:paddingEnd="16dp">
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/squirrelly_squirrel"
+        />
+    <LinearLayout
+        android:id="@+id/layout_root"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="Show guidelines?"
-        android:foreground="?attr/selectableItemBackground"
-        android:textSize="18sp"/>
-    <CheckBox
-        android:id="@+id/skip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ok please do not show again." >
-    </CheckBox>
+        android:orientation="vertical"
+        android:padding="10dp" >
+        <TextView
+            android:id="@+id/dialog_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/show_guidelines"
+            android:foreground="?attr/selectableItemBackground"
+            android:textSize="18sp"/>
+        <CheckBox
+            android:id="@+id/skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/do_not_show_again" >
+        </CheckBox>
+    </LinearLayout>
+
 </LinearLayout>
