--- a/app/src/main/res/layout/discount_recycler_view_item.xml
+++ b/app/src/main/res/layout/discount_recycler_view_item.xml
@@ -8,43 +8,80 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:clickable="true">
 
+
+
     <LinearLayout
             android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/divider">
 
-        <TextView
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="0dp"
+            android:padding="8dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_view_company_logo"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_margin="8dp"
+                android:layout_gravity="center"
+                android:gravity="center" />
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
                 android:id="@+id/tvDiscountTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
+                android:textColor="@color/colorAccent"
+                android:textSize="20sp"
+                android:fontFamily="serif"
+                android:textStyle="bold"
                 android:gravity="center_vertical"
-                android:layout_margin="8dp"/>
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="4dp"/>
 
-        <TextView
+            <TextView
                 android:id="@+id/tvDiscountInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/fui_transparent"/>
 
-        <TextView
+            <TextView
                 android:id="@+id/tvDiscountPoints"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:layout_margin="8dp"
+                android:backgroundTint="@color/fui_transparent"/>
+
+            <TextView
+                android:id="@+id/tvExpiringDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:backgroundTint="@color/fui_transparent"/>
 
-        <TextView
-            android:id="@+id/tvExpiringDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:backgroundTint="@color/fui_transparent"/>
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
