--- a/app/src/main/res/layout/fragment_view_discount.xml
+++ b/app/src/main/res/layout/fragment_view_discount.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,39 +12,94 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/cardview_light_background"
         android:layout_margin="8dp"
         android:elevation="8dp"
-        android:background="@color/cardview_light_background">
+        app:layout_constraintBottom_toTopOf="@id/btnUseDiscountSwipe">
 
-        <TextView
-            android:id="@+id/tvViewDiscountTitle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="16sp"
-            android:gravity="center_vertical"
-            android:layout_margin="8dp"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvViewDiscountInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:backgroundTint="@color/fui_transparent"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="0dp"
+                android:padding="8dp"
+                android:layout_gravity="center"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvViewDiscountPoints"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:backgroundTint="@color/fui_transparent"/>
+                <ImageView
+                    android:id="@+id/image_view_company_logo"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_margin="8dp"
+                    android:layout_gravity="center"
+                    android:gravity="center" />
 
-        <TextView
-            android:id="@+id/tvViewExpiringDate"
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvDiscountTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="20sp"
+                    android:fontFamily="serif"
+                    android:textStyle="bold"
+                    android:gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="4dp"/>
+
+                <TextView
+                    android:id="@+id/tvDiscountInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:backgroundTint="@color/fui_transparent"/>
+
+                <TextView
+                    android:id="@+id/tvDiscountPoints"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:layout_margin="8dp"
+                    android:backgroundTint="@color/fui_transparent"/>
+
+                <TextView
+                    android:id="@+id/tvExpiringDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:backgroundTint="@color/fui_transparent"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+
+        <com.example.timil.climateapplication.SwipeButton
+            android:id="@+id/btnUseDiscountSwipe"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:backgroundTint="@color/fui_transparent"/>
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="8dp"
+            android:layout_height="72dp" />
+
 
     </LinearLayout>
 
@@ -56,11 +111,6 @@
         android:layout_height="wrap_content"
         android:text="USE DISCOUNT"/-->
 
-    <com.example.timil.climateapplication.SwipeButton
-        android:id="@+id/btnUseDiscountSwipe"
-        android:layout_width="match_parent"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_height="72dp" />
+
 
 </LinearLayout>
