--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/backgroundapp"
         android:id="@+id/main_content"
-        tools:context=".MainActivity">
+        tools:context=".activities.MainActivity">
 
     <android.support.v4.widget.DrawerLayout
             android:id="@+id/drawer_layout"
