fix crash caused by the new folder structure (when entering the discount view).

--- a/app/src/main/res/layout/fragment_view_discount.xml
+++ b/app/src/main/res/layout/fragment_view_discount.xml
@@ -113,7 +113,7 @@
 
             </FrameLayout>
 
-            <com.example.timil.climateapplication.SwipeButton
+            <com.example.timil.climateapplication.ui.SwipeButton
                 android:id="@+id/btnUseDiscountSwipe"
                 android:layout_width="match_parent"
                 app:layout_constraintStart_toStartOf="parent"
