improved discounts UI + fixed an issue with music play

--- a/app/src/main/res/layout/discount_recycler_view_item.xml
+++ b/app/src/main/res/layout/discount_recycler_view_item.xml
@@ -58,21 +58,22 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="4dp"/>
 
-            <TextView
+            <!--TextView
                 android:id="@+id/tvDiscountWebLink"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="italic"
-                android:backgroundTint="@color/fui_transparent"/>
+                android:autoLink="web"
+                android:backgroundTint="@color/fui_transparent"/-->
 
-            <TextView
+            <!--TextView
                 android:id="@+id/tvDiscountInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:backgroundTint="@color/fui_transparent"/>
+                android:backgroundTint="@color/fui_transparent"/-->
 
             <TextView
                 android:id="@+id/tvDiscountPoints"
