--- a/app/src/main/res/layout/fragment_discounts.xml
+++ b/app/src/main/res/layout/fragment_discounts.xml
@@ -1,37 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.DiscountsFragment">
 
-    <TextView
-        android:id="@+id/tvMyPoints"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_margin="10dp"
-        android:textAllCaps="true"
-        android:textSize="18sp"
-        android:padding="10dp"
-        android:background="@drawable/tv_background"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tvMyPoints"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
 
     </android.support.v7.widget.RecyclerView>
 
+
+
     <ProgressBar
+        android:layout_centerInParent="true"
         android:id="@+id/progressBarDiscounts"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
@@ -41,4 +34,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
