--- a/app/src/main/res/layout/fragment_tab_layout.xml
+++ b/app/src/main/res/layout/fragment_tab_layout.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/fui_transparent"
+        app:tabTextColor="@color/colorAccent"
         app:layout_constraintTop_toTopOf="parent">
     </android.support.design.widget.TabLayout>
 
@@ -20,6 +21,26 @@
         tools:layout_editor_absoluteX="8dp"
         app:layout_constraintTop_toBottomOf="@id/tabLayout"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:alpha="0.8"
+        android:id="@+id/tvMyPoints"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textAllCaps="true"
+        android:textSize="18sp"
+        android:padding="10dp"
+        android:elevation="8dp"
+        android:visibility="gone"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/custom_button"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
