--- a/app/src/main/res/layout/fragment_view_discount.xml
+++ b/app/src/main/res/layout/fragment_view_discount.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -15,8 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/cardview_light_background"
         android:layout_margin="8dp"
-        android:elevation="8dp"
-        app:layout_constraintBottom_toTopOf="@id/btnUseDiscountSwipe">
+        android:elevation="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,8 +67,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/colorPrimary"
                     android:textStyle="italic"
+                    android:autoLink="web"
                     android:backgroundTint="@color/fui_transparent"/>
 
                 <TextView
@@ -136,7 +136,25 @@
 
 
 
-
+    <TextView
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:alpha="0.8"
+        android:id="@+id/tvMyPoints"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textAllCaps="true"
+        android:textSize="18sp"
+        android:padding="10dp"
+        android:elevation="8dp"
+        android:visibility="gone"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/custom_button"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 
@@ -148,4 +166,4 @@
 
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
